mural Update index.html

--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
               <p class="text-apple-text text-lg max-w-sm">Transforming dull walls into vibrant storytelling canvases for businesses and communities.</p>
             </div>
             <div class="mt-8">
-              <a href="#contact" class="inline-flex items-center text-apple-blue font-medium hover:underline">Get a Quote <i data-lucide="arrow-right" class="w-4 h-4 ml-1"></i></a>
+              <a href="murals.html" class="inline-flex items-center text-apple-blue font-medium hover:underline">
+  View Murals <i data-lucide="arrow-right" class="w-4 h-4 ml-1"></i></a>
             </div>
           </div>
           <img src="16.jpg" class="absolute right-0 bottom-0 w-2/3 h-full object-cover opacity-80 group-hover:scale-105 transition-transform duration-700" alt="Mural preview">
@@ -842,3 +843,4 @@
   </script>
 </body>
 </html>
+
