--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
               <p class="text-apple-text text-lg max-w-sm">Pottery, resin, acrylics & guided art sessions.</p>
             </div>
           </div>
+          <a href="workshops.html" class="inline-flex items-center text-apple-blue font-medium hover:underline">
+  View Workshops <i data-lucide="arrow-right" class="w-4 h-4 ml-1"></i>
+</a>
+
           <img src="23.jpg" class="absolute right-0 bottom-0 w-2/3 h-full object-cover opacity-80 group-hover:scale-105 transition-transform duration-700" alt="Workshop preview">
           <div class="absolute inset-0 bg-gradient-to-r from-white via-white/80 to-transparent pointer-events-none"></div>
         </div>
@@ -204,8 +208,11 @@
               <p class="text-sm font-semibold text-apple-text uppercase tracking-wide mb-2">Custom Art</p>
               <h3 class="text-3xl font-bold text-black mb-2">Commissions</h3>
               <p class="text-apple-text text-lg max-w-sm">Personalized art crafted to your vision.</p>
-            </div>
+            </div>            
           </div>
+          <a href="commissions.html" class="inline-flex items-center text-apple-blue font-medium hover:underline">
+  View Commissions <i data-lucide="arrow-right" class="w-4 h-4 ml-1"></i>
+</a>
           <img src="14.jpg" class="absolute right-0 bottom-0 w-2/3 h-full object-cover opacity-80 group-hover:scale-105 transition-transform duration-700" alt="Commission preview">
           <div class="absolute inset-0 bg-gradient-to-r from-white via-white/80 to-transparent pointer-events-none"></div>
         </div>
@@ -843,4 +850,5 @@
   </script>
 </body>
 </html>
+
 
