--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>knockKnockArt | The Studio</title>
+  <title>Knock.Knock.Art | The Studio</title>
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -106,7 +106,7 @@
   <div class="max-w-[980px] mx-auto px-4">
     <div class="flex justify-between items-center h-12 text-xs font-medium">
       <a href="#" class="text-lg font-semibold tracking-tight text-black opacity-90 hover:opacity-100 transition-opacity">
-        knockKnockArt
+        Knock.Knock.Art
       </a>
 
       <div class="hidden md:flex space-x-8 text-black/80">
@@ -142,7 +142,7 @@
     </div>
 
     <!-- Background image -->
-    <img src="5.jpg" alt="Welcome to ArtFlow studio — mural & workshops"
+    <img src="3.jpg" alt="Welcome to ArtFlow studio — mural & workshops"
          loading="lazy"
          class="absolute inset-0 m-auto max-h-[100vh] w-auto h-auto object-center"
          style="max-width:100%;" />
@@ -855,6 +855,7 @@
   </script>
 </body>
 </html>
+
 
 
 
