--- a/murals.html
+++ b/murals.html
@@ -34,119 +34,120 @@
 <section class="pb-32">
   <div class="max-w-[1100px] mx-auto px-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
-    <!-- Mural 1 -->
-    <div class="group cursor-pointer">
-      <div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
-        <img src="m1.jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold text-lg">Pet Store Mural</h4>
-    </div>
+    <!-- MURALS -->
+    <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
+      <img src="m1.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+    </div><h4 class="mt-3 font-semibold text-lg">Pet Store Mural</h4></div>
 
-    <!-- Mural 2 -->
-    <div class="group cursor-pointer">
-      <div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
-        <img src="m2.jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold text-lg">Indoor Illustration Wall</h4>
-    </div>
-
-    <!-- Mural 3 -->
-    <div class="group cursor-pointer">
-      <div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
-        <img src="m3.jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold text-lg">Botanical Line Art</h4>
-    </div>
-
-	<!-- Mural 4 -->
-    <div class="group cursor-pointer">
-      <div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
-        <img src="m4.jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold text-lg">Botanical Line Art</h4>
-    </div>
-
-	<!-- Mural 5 -->
-    <div class="group cursor-pointer">
-      <div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
-        <img src="m5.jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold text-lg">Music Mural</h4>
-    </div>
-
-	<!-- Mural 6 -->
-    <div class="group cursor-pointer">
-      <div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
-        <img src="m6.jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold text-lg">Garden 1</h4>
-    </div>
-
-	<!-- Mural 7 -->
-    <div class="group cursor-pointer">
-      <div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
-        <img src="m7.jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold text-lg">Garden 2</h4>
-    </div>
-
-    
-	<!-- Mural 8 -->
-    <div class="group cursor-pointer">
-      <div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
-        <img src="m8.jpeg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold text-lg">School Mural</h4>
-    </div>
-
-	<!-- Mural 9 -->
-    <div class="group cursor-pointer">
-      <div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
-        <img src="m9.jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold text-lg">Jelly Fish</h4>
-    </div>
-
-	<!-- Mural 10 -->
-    <div class="group cursor-pointer">
-      <div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
-        <img src="m10.jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold text-lg">Shores 1</h4>
-    </div>
-    
-
-<!-- Mural 11 -->
-    <div class="group cursor-pointer">
-      <div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
-        <img src="m11.jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold text-lg">Shores 2</h4>
-    </div>
+    <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
+      <img src="m2.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+    </div><h4 class="mt-3 font-semibold text-lg">Indoor Illustration Wall</h4></div>
 
 
-<!-- Mural 12 -->
-    <div class="group cursor-pointer">
-      <div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
-        <img src="m12.jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold text-lg">Spray Paint</h4>
-    </div>
+    <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
+      <img src="m14.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+    </div><h4 class="mt-3 font-semibold text-lg">Botanical Line Art</h4></div>
+
+    <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
+      <img src="m5.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+    </div><h4 class="mt-3 font-semibold text-lg">Music Mural</h4></div>
 
 
-<!-- Mural 13 -->
-    <div class="group cursor-pointer">
-      <div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
-        <img src="m13.jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold text-lg">Traditional Mural</h4>
-    </div>
+    <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
+      <img src="m7.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+    </div><h4 class="mt-3 font-semibold text-lg">Garden 2</h4></div>
+
+    <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
+      <img src="m8.jpeg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+    </div><h4 class="mt-3 font-semibold text-lg">School Mural</h4></div>
+
+
+    <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
+      <img src="m10.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+    </div><h4 class="mt-3 font-semibold text-lg">Shores 1</h4></div>
+
+    <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
+      <img src="m11.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+    </div><h4 class="mt-3 font-semibold text-lg">Shores 2</h4></div>
+
+    <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
+      <img src="m12.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+    </div><h4 class="mt-3 font-semibold text-lg">Spray Paint</h4></div>
+
+    <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
+      <img src="m13.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+    </div><h4 class="mt-3 font-semibold text-lg">Traditional Mural</h4></div>
 
   </div>
 </section>
 
+<!-- LIGHTBOX -->
+<div id="lightbox" class="fixed inset-0 z-[100] hidden items-center justify-center bg-black/80 p-4">
+  <button id="prev" class="absolute left-4 text-white text-4xl font-bold select-none">‹</button>
+  <button id="next" class="absolute right-4 text-white text-4xl font-bold select-none">›</button>
+  <button id="lightbox-close" class="absolute top-4 right-4 bg-white rounded-full p-2 shadow text-xl">✕</button>
+  <img id="lightbox-img" class="max-w-full max-h-full rounded-2xl shadow-2xl" />
+</div>
+
 <script>
   lucide.createIcons();
+
+  const images = Array.from(document.querySelectorAll('.gallery-img'));
+  const lightbox = document.getElementById('lightbox');
+  const lightboxImg = document.getElementById('lightbox-img');
+  const closeBtn = document.getElementById('lightbox-close');
+  const prevBtn = document.getElementById('prev');
+  const nextBtn = document.getElementById('next');
+
+  let currentIndex = 0;
+  let startX = 0;
+
+  function openLightbox(index) {
+    currentIndex = index;
+    lightboxImg.src = images[currentIndex].src;
+    lightbox.classList.remove('hidden');
+    lightbox.classList.add('flex');
+    document.body.style.overflow = 'hidden';
+  }
+
+  function closeLightbox() {
+    lightbox.classList.add('hidden');
+    lightbox.classList.remove('flex');
+    document.body.style.overflow = '';
+  }
+
+  function showNext() {
+    currentIndex = (currentIndex + 1) % images.length;
+    lightboxImg.src = images[currentIndex].src;
+  }
+
+  function showPrev() {
+    currentIndex = (currentIndex - 1 + images.length) % images.length;
+    lightboxImg.src = images[currentIndex].src;
+  }
+
+  images.forEach((img, index) => {
+    img.addEventListener('click', () => openLightbox(index));
+  });
+
+  closeBtn.addEventListener('click', closeLightbox);
+  nextBtn.addEventListener('click', showNext);
+  prevBtn.addEventListener('click', showPrev);
+
+  document.addEventListener('keydown', (e) => {
+    if (lightbox.classList.contains('hidden')) return;
+    if (e.key === 'ArrowRight') showNext();
+    if (e.key === 'ArrowLeft') showPrev();
+    if (e.key === 'Escape') closeLightbox();
+  });
+
+  // Swipe support
+  lightboxImg.addEventListener('touchstart', e => startX = e.touches[0].clientX);
+  lightboxImg.addEventListener('touchend', e => {
+    const diff = e.changedTouches[0].clientX - startX;
+    if (diff > 50) showPrev();
+    if (diff < -50) showNext();
+  });
 </script>
 
 </body>
