--- a/commissions.html
+++ b/commissions.html
@@ -49,138 +49,148 @@
   <div class="max-w-[1100px] mx-auto px-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
 
     <!-- a series -->
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="a (1).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="a (1).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Abstract Line Commission</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="a (2).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="a (2).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Still Life Concept Art</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="a (3).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="a (3).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Geometric Narrative Art</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="a (4).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="a (4).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Interior Wall Commission</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="a (5).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="a (5).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Textured Pattern Art</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="a (6).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="a (6).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Floral Motif Mural</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="a (7).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="a (7).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Conceptual Illustration</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="a (8).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="a (8).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Figurative Painting</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="a (9).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="a (9).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Vibrant Abstract Canvas</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="a(10).jpeg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="a(10).jpeg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Personalized Portrait Gift</h4>
     </div>
 
-    <!-- ab series -->
-    <div class="group">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (1).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Hand-Painted Tote</h4>
-    </div>
-
-    <div class="group">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (2).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Wearable Art Piece</h4>
-    </div>
-
-    <div class="group">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (3).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Custom Apparel Design</h4>
-    </div>
-
-    <div class="group">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (4).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Charity Artwork</h4>
-    </div>
-
-    <div class="group">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (5).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Monochrome Textile Art</h4>
-    </div>
-
-    <div class="group">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (6).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Custom Tote Illustration</h4>
-    </div>
-
-    <div class="group">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (7).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Cause-Driven Art</h4>
-    </div>
-
-    <div class="group">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (8).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Graphic Wearable Design</h4>
-    </div>
+    
 
   </div>
 </section>
 
+<!-- LIGHTBOX -->
+<div id="lightbox" class="fixed inset-0 z-[100] hidden items-center justify-center bg-black/80 p-4">
+  <button id="prev" class="absolute left-4 text-white text-4xl font-bold select-none">‹</button>
+  <button id="next" class="absolute right-4 text-white text-4xl font-bold select-none">›</button>
+  <button id="lightbox-close" class="absolute top-4 right-4 bg-white rounded-full p-2 shadow text-xl">✕</button>
+  <img id="lightbox-img" class="max-w-full max-h-full rounded-2xl shadow-2xl" />
+</div>
+
 <script>
   lucide.createIcons();
+
+  const images = Array.from(document.querySelectorAll('.gallery-img'));
+  const lightbox = document.getElementById('lightbox');
+  const lightboxImg = document.getElementById('lightbox-img');
+  const closeBtn = document.getElementById('lightbox-close');
+  const prevBtn = document.getElementById('prev');
+  const nextBtn = document.getElementById('next');
+
+  let currentIndex = 0;
+  let startX = 0;
+
+  function openLightbox(index) {
+    currentIndex = index;
+    lightboxImg.src = images[currentIndex].src;
+    lightbox.classList.remove('hidden');
+    lightbox.classList.add('flex');
+    document.body.style.overflow = 'hidden';
+  }
+
+  function closeLightbox() {
+    lightbox.classList.add('hidden');
+    lightbox.classList.remove('flex');
+    document.body.style.overflow = '';
+  }
+
+  function showNext() {
+    currentIndex = (currentIndex + 1) % images.length;
+    lightboxImg.src = images[currentIndex].src;
+  }
+
+  function showPrev() {
+    currentIndex = (currentIndex - 1 + images.length) % images.length;
+    lightboxImg.src = images[currentIndex].src;
+  }
+
+  images.forEach((img, index) => {
+    img.addEventListener('click', () => openLightbox(index));
+  });
+
+  closeBtn.addEventListener('click', closeLightbox);
+  nextBtn.addEventListener('click', showNext);
+  prevBtn.addEventListener('click', showPrev);
+
+  document.addEventListener('keydown', (e) => {
+    if (lightbox.classList.contains('hidden')) return;
+    if (e.key === 'ArrowRight') showNext();
+    if (e.key === 'ArrowLeft') showPrev();
+    if (e.key === 'Escape') closeLightbox();
+  });
+
+  // Swipe support
+  lightboxImg.addEventListener('touchstart', e => startX = e.touches[0].clientX);
+  lightboxImg.addEventListener('touchend', e => {
+    const diff = e.changedTouches[0].clientX - startX;
+    if (diff > 50) showPrev();
+    if (diff < -50) showNext();
+  });
 </script>
 
 </body>
