--- a/workshops.html
+++ b/workshops.html
@@ -49,9 +49,9 @@
   <div class="max-w-[1100px] mx-auto px-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
 
     <!-- WG SERIES -->
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm bg-black">
-        <img src="wg (1).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="wg (1).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Glass Painting Workshop</h4>
     </div>
@@ -65,38 +65,38 @@
       <h4 class="mt-3 font-semibold">Glass Art Process</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="wg (2).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="wg (2).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Creative Illustration Session</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="wg (3).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="wg (3).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Workshop Display Artwork</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="wg (4).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="wg (4).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Glass Framing Exploration</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="wg (5).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="wg (5).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Finished Glass Artwork</h4>
     </div>
 
     <!-- WT SERIES -->
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="wt (1).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="wt (1).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Texture Art Workshop</h4>
     </div>
@@ -110,30 +110,30 @@
       <h4 class="mt-3 font-semibold">Texture Art Process</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="wt (2).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="wt (2).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Floral Texture Practice</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="wt (3).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="wt (3).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Student Artwork Display</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="wt (4).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="wt (4).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Mixed Media Exploration</h4>
     </div>
 
-    <div class="group">
+    <div class="group cursor-pointer">
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
-        <img src="wt (5).jpg" class="w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="wt (5).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Final Texture Workshop Creations</h4>
     </div>
@@ -141,8 +141,73 @@
   </div>
 </section>
 
+<!-- LIGHTBOX -->
+<div id="lightbox" class="fixed inset-0 z-[100] hidden items-center justify-center bg-black/80 p-4">
+  <button id="prev" class="absolute left-4 text-white text-4xl font-bold select-none">‹</button>
+  <button id="next" class="absolute right-4 text-white text-4xl font-bold select-none">›</button>
+  <button id="lightbox-close" class="absolute top-4 right-4 bg-white rounded-full p-2 shadow text-xl">✕</button>
+  <img id="lightbox-img" class="max-w-full max-h-full rounded-2xl shadow-2xl" />
+</div>
+
 <script>
   lucide.createIcons();
+
+  const images = Array.from(document.querySelectorAll('.gallery-img'));
+  const lightbox = document.getElementById('lightbox');
+  const lightboxImg = document.getElementById('lightbox-img');
+  const closeBtn = document.getElementById('lightbox-close');
+  const prevBtn = document.getElementById('prev');
+  const nextBtn = document.getElementById('next');
+
+  let currentIndex = 0;
+  let startX = 0;
+
+  function openLightbox(index) {
+    currentIndex = index;
+    lightboxImg.src = images[currentIndex].src;
+    lightbox.classList.remove('hidden');
+    lightbox.classList.add('flex');
+    document.body.style.overflow = 'hidden';
+  }
+
+  function closeLightbox() {
+    lightbox.classList.add('hidden');
+    lightbox.classList.remove('flex');
+    document.body.style.overflow = '';
+  }
+
+  function showNext() {
+    currentIndex = (currentIndex + 1) % images.length;
+    lightboxImg.src = images[currentIndex].src;
+  }
+
+  function showPrev() {
+    currentIndex = (currentIndex - 1 + images.length) % images.length;
+    lightboxImg.src = images[currentIndex].src;
+  }
+
+  images.forEach((img, index) => {
+    img.addEventListener('click', () => openLightbox(index));
+  });
+
+  closeBtn.addEventListener('click', closeLightbox);
+  nextBtn.addEventListener('click', showNext);
+  prevBtn.addEventListener('click', showPrev);
+
+  document.addEventListener('keydown', (e) => {
+    if (lightbox.classList.contains('hidden')) return;
+    if (e.key === 'ArrowRight') showNext();
+    if (e.key === 'ArrowLeft') showPrev();
+    if (e.key === 'Escape') closeLightbox();
+  });
+
+  // Swipe support
+  lightboxImg.addEventListener('touchstart', e => startX = e.touches[0].clientX);
+  lightboxImg.addEventListener('touchend', e => {
+    const diff = e.changedTouches[0].clientX - startX;
+    if (diff > 50) showPrev();
+    if (diff < -50) showNext();
+  });
 </script>
 
 </body>
