--- a/index.html
+++ b/index.html
@@ -164,7 +164,15 @@
   <!-- Services -->
   <section id="services" class="py-32 bg-apple-gray">
     <div class="max-w-[980px] mx-auto px-6">
-      <div class="mb-16 reveal-element">
+      <!-- Studio Introduction -->
+<p class="text-sm md:text-base text-apple-text max-w-2xl mb-6 reveal-element">
+  We’re a Bengaluru-based creative studio specializing in wall paintings, commissioned artwork,
+  and workshops. Born from the belief that art can both heal and change the world, we create work
+  that serves, inspires, and makes an impact. Our approach is simple: beauty and purpose aren’t
+  mutually exclusive — they’re inseparable.
+</p>
+
+      <div class="mb-16 reveal-element">        
         <h2 class="text-4xl md:text-5xl font-bold text-black mb-4">Our Craft.</h2>
         <p class="text-xl text-apple-text max-w-lg">Designed to inspire. Built to last.</p>
       </div>
@@ -855,6 +863,7 @@
   </script>
 </body>
 </html>
+
 
 
 
