--- a/workshops.html
+++ b/workshops.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Workshops | knockKnockArt</title>
+  <title>Workshops | Knock.Knock.Art</title>
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -29,7 +29,7 @@
 <!-- NAV -->
 <nav class="fixed w-full z-50 bg-white/70 backdrop-blur border-b border-gray-200/50">
   <div class="max-w-[980px] mx-auto px-4 h-12 flex items-center justify-between">
-    <a href="index.html" class="font-semibold text-lg">knockKnockArt</a>
+    <a href="index.html" class="font-semibold text-lg">Knock.Knock.Art</a>
     <a href="index.html#services" class="text-sm text-gray-600 hover:text-black flex items-center gap-1">
       <i data-lucide="arrow-left" class="w-4 h-4"></i> Back
     </a>
@@ -212,3 +212,4 @@
 
 </body>
 </html>
+
