--- a/commissions.html
+++ b/commissions.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Commissions | knockKnockArt</title>
+  <title>Portraits and Originals | Knock.Knock.Art</title>
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -29,7 +29,7 @@
 <!-- NAV -->
 <nav class="fixed w-full z-50 bg-white/70 backdrop-blur border-b border-gray-200/50">
   <div class="max-w-[980px] mx-auto px-4 h-12 flex items-center justify-between">
-    <a href="index.html" class="font-semibold text-lg">knockKnockArt</a>
+    <a href="index.html" class="font-semibold text-lg">Knock.Knock.Art</a>
     <a href="index.html#services" class="text-sm text-gray-600 hover:text-black flex items-center gap-1">
       <i data-lucide="arrow-left" class="w-4 h-4"></i> Back
     </a>
@@ -119,7 +119,62 @@
       <h4 class="mt-3 font-semibold">Personalized Portrait Gift</h4>
     </div>
 
-    
+    <!-- ab series -->
+    <div class="group cursor-pointer">
+      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
+        <img src="ab (1).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+      </div>
+      <h4 class="mt-3 font-semibold">Hand-Painted Tote</h4>
+    </div>
+
+    <div class="group cursor-pointer">
+      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
+        <img src="ab (2).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+      </div>
+      <h4 class="mt-3 font-semibold">Wearable Art Piece</h4>
+    </div>
+
+    <div class="group cursor-pointer">
+      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
+        <img src="ab (3).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+      </div>
+      <h4 class="mt-3 font-semibold">Custom Apparel Design</h4>
+    </div>
+
+    <div class="group cursor-pointer">
+      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
+        <img src="ab (4).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+      </div>
+      <h4 class="mt-3 font-semibold">Charity Artwork</h4>
+    </div>
+
+    <div class="group cursor-pointer">
+      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
+        <img src="ab (5).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+      </div>
+      <h4 class="mt-3 font-semibold">Monochrome Textile Art</h4>
+    </div>
+
+    <div class="group cursor-pointer">
+      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
+        <img src="ab (6).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+      </div>
+      <h4 class="mt-3 font-semibold">Custom Tote Illustration</h4>
+    </div>
+
+    <div class="group cursor-pointer">
+      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
+        <img src="ab (7).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+      </div>
+      <h4 class="mt-3 font-semibold">Cause-Driven Art</h4>
+    </div>
+
+    <div class="group cursor-pointer">
+      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
+        <img src="ab (8).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+      </div>
+      <h4 class="mt-3 font-semibold">Graphic Wearable Design</h4>
+    </div>
 
   </div>
 </section>
