--- a/murals.html
+++ b/murals.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Murals | knockKnockArt</title>
+  <title>Murals | Knock.Knock.Art</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +17,7 @@
 <!-- NAV -->
 <nav class="fixed w-full z-50 bg-white/70 backdrop-blur border-b border-gray-200/50">
   <div class="max-w-[980px] mx-auto px-4 h-12 flex items-center justify-between">
-    <a href="index.html" class="font-semibold text-lg">knockKnockArt</a>
+    <a href="index.html" class="font-semibold text-lg">Knock.Knock.Art</a>
     <a href="index.html#services" class="text-sm text-gray-600 hover:text-black">← Back</a>
   </div>
 </nav>
@@ -152,3 +152,4 @@
 
 </body>
 </html>
+
