--- a/index.html
+++ b/index.html
@@ -601,17 +601,50 @@
       <h2 class="text-4xl md:text-5xl font-bold text-black mb-6">Let's create something.</h2>
       <p class="text-xl text-apple-text mb-12">Whether it's a mural for your office or a gift for a friend.</p>
 
-      <form class="space-y-4 text-left" onsubmit="event.preventDefault(); alert('Message sent.');">
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-          <input type="text" placeholder="Name" aria-label="Name" class="w-full p-4 bg-apple-gray rounded-xl border-none focus:ring-2 focus:ring-apple-blue outline-none transition-shadow text-black placeholder-gray-500" />
-          <input type="email" placeholder="Email" aria-label="Email" class="w-full p-4 bg-apple-gray rounded-xl border-none focus:ring-2 focus:ring-apple-blue outline-none transition-shadow text-black placeholder-gray-500" />
-        </div>
-        <textarea rows="4" placeholder="Your idea..." aria-label="Your idea" class="w-full p-4 bg-apple-gray rounded-xl border-none focus:ring-2 focus:ring-apple-blue outline-none transition-shadow text-black placeholder-gray-500"></textarea>
+      <form
+  action="https://docs.google.com/forms/d/e/1FAIpQLSdU29xmE7srS9G1CfvYOGRWWtwP2OV_hDkAbmX5qQajTBXM-g/viewform?usp=dialog"
+  method="POST"
+  target="_blank"
+  class="space-y-4 text-left"
+>
 
-        <div class="flex justify-center pt-4">
-          <button type="submit" class="px-12 py-4 bg-black text-white rounded-full font-medium text-lg hover:scale-105 transition-transform">Send Message</button>
-        </div>
-      </form>
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+    <input
+      type="text"
+      name="entry.XXXXXXX_NAME"
+      placeholder="Name"
+      required
+      class="w-full p-4 bg-apple-gray rounded-xl border-none focus:ring-2 focus:ring-apple-blue outline-none transition-shadow text-black placeholder-gray-500"
+    />
+
+    <input
+      type="email"
+      name="entry.XXXXXXX_EMAIL"
+      placeholder="Email"
+      required
+      class="w-full p-4 bg-apple-gray rounded-xl border-none focus:ring-2 focus:ring-apple-blue outline-none transition-shadow text-black placeholder-gray-500"
+    />
+  </div>
+
+  <textarea
+    name="entry.XXXXXXX_MESSAGE"
+    rows="4"
+    placeholder="Your idea..."
+    required
+    class="w-full p-4 bg-apple-gray rounded-xl border-none focus:ring-2 focus:ring-apple-blue outline-none transition-shadow text-black placeholder-gray-500"
+  ></textarea>
+
+  <div class="flex justify-center pt-4">
+    <button
+      type="submit"
+      class="px-12 py-4 bg-black text-white rounded-full font-medium text-lg hover:scale-105 transition-transform"
+    >
+      Send Message
+    </button>
+  </div>
+
+</form>
+
 
       <!-- Socials -->
       <div class="mt-8 text-center reveal-element">
@@ -626,31 +659,7 @@
                 <i data-lucide="instagram" class="w-5 h-5"></i>
               </a>
 
-              <a href="https://www.behance.net/yourhandle" target="_blank" rel="noopener noreferrer"
-                 class="inline-flex items-center justify-center w-10 h-10 rounded-xl bg-white/5 hover:bg-white/10 transition"
-                 aria-label="Behance">
-                <i data-lucide="behance" class="w-5 h-5"></i>
-              </a>
-
-              <a href="https://dribbble.com/yourhandle" target="_blank" rel="noopener noreferrer"
-                 class="inline-flex items-center justify-center w-10 h-10 rounded-xl bg-white/5 hover:bg-white/10 transition"
-                 aria-label="Dribbble">
-                <i data-lucide="dribbble" class="w-5 h-5"></i>
-              </a>
-
-              <a href="https://www.linkedin.com/in/yourhandle" target="_blank" rel="noopener noreferrer"
-                 class="inline-flex items-center justify-center w-10 h-10 rounded-xl bg-white/5 hover:bg-white/10 transition"
-                 aria-label="LinkedIn">
-                <i data-lucide="linkedin" class="w-5 h-5"></i>
-              </a>
-
-              <a href="https://youtube.com/yourchannel" target="_blank" rel="noopener noreferrer"
-                 class="inline-flex items-center justify-center w-10 h-10 rounded-xl bg-white/5 hover:bg-white/10 transition"
-                 aria-label="YouTube">
-                <i data-lucide="youtube" class="w-5 h-5"></i>
-              </a>
-            </div>
-
+              
             <div class="mt-4 flex flex-col sm:flex-row items-center justify-center gap-3 text-sm">
               <a href="knock.knock.art13@gmail.com" class="text-apple-text hover:text-black transition">knock.knock.art13@gmail.com</a>
               <span class="text-apple-text">•</span>
@@ -894,4 +903,3 @@
   </script>
 </body>
 </html>
-
