--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
   <div class="max-w-[1100px] mx-auto px-6 text-center">
     
     <h2 class="text-4xl md:text-5xl font-bold text-black mb-4">
-      Why Choose My Artistry?
+      Why Choose Our Artistry?
     </h2>
 
     <p class="text-lg md:text-xl text-apple-text mb-16 max-w-2xl mx-auto">
@@ -524,7 +524,7 @@
   <div class="max-w-[1100px] mx-auto px-6 text-center">
 
     <h2 class="text-4xl md:text-5xl font-bold text-black mb-4">
-      My Creative Process
+      Our Creative Process
     </h2>
 
     <p class="text-lg md:text-xl text-apple-text mb-16 max-w-2xl mx-auto">
@@ -894,4 +894,5 @@
   </script>
 </body>
 </html>
+
 
