--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
       <p class="text-xl text-apple-text mb-12">Whether it's a mural for your office or a gift for a friend.</p>
 
       <form
-  action="https://docs.google.com/forms/d/e/1FAIpQLSdU29xmE7srS9G1CfvYOGRWWtwP2OV_hDkAbmX5qQajTBXM-g/viewform?usp=dialog"
+  action=https://docs.google.com/forms/d/e/1FAIpQLSdU29xmE7srS9G1CfvYOGRWWtwP2OV_hDkAbmX5qQajTBXM-g/viewform?usp=dialog"
   method="POST"
   target="_blank"
   class="space-y-4 text-left"
@@ -894,6 +894,7 @@
   </script>
 </body>
 </html>
+
 
 
 
