--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
       <p class="text-xl text-apple-text mb-12">Whether it's a mural for your office or a gift for a friend.</p>
 
       <form
-  action=https://docs.google.com/forms/d/e/1FAIpQLSdU29xmE7srS9G1CfvYOGRWWtwP2OV_hDkAbmX5qQajTBXM-g/viewform?usp=dialog"
+  action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdU29xmE7srS9G1CfvYOGRWWtwP2OV_hDkAbmX5qQajTBXM-g/formResponse"
   method="POST"
   target="_blank"
   class="space-y-4 text-left"
@@ -611,7 +611,7 @@
   <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
     <input
       type="text"
-      name="entry.XXXXXXX_NAME"
+      name="entry.902464977"
       placeholder="Name"
       required
       class="w-full p-4 bg-apple-gray rounded-xl border-none focus:ring-2 focus:ring-apple-blue outline-none transition-shadow text-black placeholder-gray-500"
@@ -619,7 +619,7 @@
 
     <input
       type="email"
-      name="entry.XXXXXXX_EMAIL"
+      name="entry.1322995631"
       placeholder="Email"
       required
       class="w-full p-4 bg-apple-gray rounded-xl border-none focus:ring-2 focus:ring-apple-blue outline-none transition-shadow text-black placeholder-gray-500"
@@ -627,7 +627,7 @@
   </div>
 
   <textarea
-    name="entry.XXXXXXX_MESSAGE"
+    name="entry.1644292415"
     rows="4"
     placeholder="Your idea..."
     required
@@ -894,6 +894,7 @@
   </script>
 </body>
 </html>
+
 
 
 
