--- a/murals.html
+++ b/murals.html
@@ -37,11 +37,11 @@
     <!-- MURALS -->
     <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
       <img src="m1.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
-    </div><h4 class="mt-3 font-semibold text-lg">Pet Store Mural</h4></div>
+    </div><h4 class="mt-3 font-semibold text-lg">Baby Wall Mural</h4></div>
 
     <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
       <img src="m2.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
-    </div><h4 class="mt-3 font-semibold text-lg">Indoor Illustration Wall</h4></div>
+    </div><h4 class="mt-3 font-semibold text-lg">Pet Store Mural</h4></div>
 
 
     <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
@@ -55,7 +55,7 @@
 
     <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
       <img src="m7.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
-    </div><h4 class="mt-3 font-semibold text-lg">Garden 2</h4></div>
+    </div><h4 class="mt-3 font-semibold text-lg">Garden Mural</h4></div>
 
     <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
       <img src="m8.jpeg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
@@ -152,4 +152,5 @@
 
 </body>
 </html>
+
 
