--- a/commissions.html
+++ b/commissions.html
@@ -38,7 +38,7 @@
 
 <!-- HEADER -->
 <section class="pt-32 pb-16 text-center">
-  <h1 class="text-4xl md:text-5xl font-bold mb-4">Commissions</h1>
+  <h1 class="text-4xl md:text-5xl font-bold mb-4">Portraits and Originals</h1>
   <p class="text-gray-500 max-w-xl mx-auto">
     Custom artworks created for individuals, brands, causes, and special projects.
   </p>
@@ -53,7 +53,7 @@
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
         <img src="a (1).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
-      <h4 class="mt-3 font-semibold">Abstract Line Commission</h4>
+      <h4 class="mt-3 font-semibold">Abstract Line</h4>
     </div>
 
     <div class="group cursor-pointer">
@@ -74,7 +74,7 @@
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
         <img src="a (4).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
-      <h4 class="mt-3 font-semibold">Interior Wall Commission</h4>
+      <h4 class="mt-3 font-semibold">Still Life Concept</h4>
     </div>
 
     <div class="group cursor-pointer">
@@ -88,7 +88,7 @@
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
         <img src="a (6).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
-      <h4 class="mt-3 font-semibold">Floral Motif Mural</h4>
+      <h4 class="mt-3 font-semibold">Floral</h4>
     </div>
 
     <div class="group cursor-pointer">
@@ -117,63 +117,6 @@
         <img src="a(10).jpeg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Personalized Portrait Gift</h4>
-    </div>
-
-    <!-- ab series -->
-    <div class="group cursor-pointer">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (1).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Hand-Painted Tote</h4>
-    </div>
-
-    <div class="group cursor-pointer">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (2).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Wearable Art Piece</h4>
-    </div>
-
-    <div class="group cursor-pointer">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (3).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Custom Apparel Design</h4>
-    </div>
-
-    <div class="group cursor-pointer">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (4).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Charity Artwork</h4>
-    </div>
-
-    <div class="group cursor-pointer">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (5).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Monochrome Textile Art</h4>
-    </div>
-
-    <div class="group cursor-pointer">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (6).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Custom Tote Illustration</h4>
-    </div>
-
-    <div class="group cursor-pointer">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (7).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Cause-Driven Art</h4>
-    </div>
-
-    <div class="group cursor-pointer">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="ab (8).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Graphic Wearable Design</h4>
     </div>
 
   </div>
@@ -250,3 +193,4 @@
 
 </body>
 </html>
+
