--- a/workshops.html
+++ b/workshops.html
@@ -69,26 +69,19 @@
       <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
         <img src="wg (2).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
-      <h4 class="mt-3 font-semibold">Creative Illustration Session</h4>
-    </div>
-
-    <div class="group cursor-pointer">
-      <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="wg (3).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
-      </div>
-      <h4 class="mt-3 font-semibold">Workshop Display Artwork</h4>
+      <h4 class="mt-3 font-semibold">Glass Painting Display</h4>
     </div>
 
     <div class="group cursor-pointer">
       <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
         <img src="wg (4).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
-      <h4 class="mt-3 font-semibold">Glass Framing Exploration</h4>
+      <h4 class="mt-3 font-semibold">Glass Painting Display</h4>
     </div>
 
     <div class="group cursor-pointer">
       <div class="aspect-[3/4] overflow-hidden rounded-3xl shadow-sm">
-        <img src="wg (5).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
+        <img src="wg (6).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
       <h4 class="mt-3 font-semibold">Finished Glass Artwork</h4>
     </div>
@@ -114,7 +107,7 @@
       <div class="aspect-square overflow-hidden rounded-3xl shadow-sm">
         <img src="wt (2).jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
       </div>
-      <h4 class="mt-3 font-semibold">Floral Texture Practice</h4>
+      <h4 class="mt-3 font-semibold">Gold Foiling with Texture</h4>
     </div>
 
     <div class="group cursor-pointer">
@@ -212,4 +205,5 @@
 
 </body>
 </html>
+
 
