--- a/murals.html
+++ b/murals.html
@@ -72,7 +72,7 @@
 
     <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
       <img src="m12.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
-    </div><h4 class="mt-3 font-semibold text-lg">Spray Paint</h4></div>
+    </div><h4 class="mt-3 font-semibold text-lg">School Mural</h4></div>
 
     <div class="group cursor-pointer"><div class="overflow-hidden rounded-3xl aspect-[4/3] shadow-sm">
       <img src="m13.jpg" class="gallery-img w-full h-full object-cover group-hover:scale-105 transition duration-700">
@@ -152,5 +152,6 @@
 
 </body>
 </html>
+
 
 
